Better colors and scrollbar

--- a/src/styles/_macros.scss
+++ b/src/styles/_macros.scss
@@ -1,20 +1,26 @@
 $color-light: white;
-$color-dark: hsl(217, 14%, 50%);
-@mixin borderOutsetTopBottom($width) {
+$color-dark: hsl(217, 14%, 15%);
+@mixin borderOutsetVertical($width) {
     border-top: #{$width} solid #{$color-light};
     border-bottom: #{$width} solid #{$color-dark};
 }
-@mixin borderInsetTopBottom($width) {
+@mixin borderInsetVertical($width) {
     border-bottom: #{$width} solid #{$color-light};
     border-top: #{$width} solid #{$color-dark};
 }
-@mixin borderOutset($width) {
-    @include borderOutsetTopBottom(#{$width});
+@mixin borderOutsetHorizontal($width) {
     border-left: #{$width} solid #{$color-light};
     border-right: #{$width} solid #{$color-dark};
 }
-@mixin borderInset($width) {
-    @include borderInsetTopBottom(#{$width});
+@mixin borderInsetHorizontal($width) {
     border-right: #{$width} solid #{$color-light};
     border-left: #{$width} solid #{$color-dark};
+}
+@mixin borderOutset($width) {
+    @include borderOutsetVertical(#{$width});
+    @include borderOutsetHorizontal(#{$width});
+}
+@mixin borderInset($width) {
+    @include borderInsetVertical(#{$width});
+    @include borderInsetHorizontal(#{$width});
 }
