--- a/src/styles/_window.scss
+++ b/src/styles/_window.scss
@@ -64,7 +64,7 @@
         &:active {
             cursor: grabbing;
         }
-        @include macros.borderOutsetTopBottom(2px);
+        @include macros.borderOutsetVertical(3px);
 
         .dimple {
             flex: 1;
