--- a/src/styles/_consent.scss
+++ b/src/styles/_consent.scss
@@ -6,39 +6,47 @@
     bottom: 0;
     right: 0;
     left: 0;
-    background-color: hsl(209, 25%, 10%);
+    background-color: hsl(209, 25%, 0%);
     color: white;
     display: flex;
     flex-direction: column;
     justify-content: center;
     align-items: center;
 
-    h1 {
-        font-size: 2rem;
-        font-weight: 600;
+    h1, p {
+        font-size: 1.2rem;
         margin: 1rem;
         text-align: center;
     }
 
-    p {
-        font-size: 1.4rem;
-        text-align: center;
+    h1 {
+        font-weight: 600;
     }
 
     .agree {
-        font-size: 1.4rem;
+        font-size: 1.3rem;
         font-weight: 900;
         margin-top: 2rem;
         padding: 1rem;
         text-decoration: underline;
         cursor: pointer;
+        color: red
     }
 
-    .lang-flag {
-        @include macros.borderOutset(2px);
-        width: 40px;
-        cursor: pointer;
-        image-rendering: pixelated;
+    .flags {
         margin-top: 4rem;
+        display: flex;
+        gap: 0.5rem;
+
+        .lang-flag {
+            height: 20px;
+            cursor: pointer;
+            image-rendering: pixelated;
+            border: 2px solid #00000000;
+            &.active {
+                border: 2px solid red;
+            }
+
+        }
     }
 }
