--- a/src/styles/_projects.scss
+++ b/src/styles/_projects.scss
@@ -1,5 +1,22 @@
 .projects {
     border: 2px solid black;
+    border-width: 2px 0 0 2px;
+
+    .border-bottom {
+        background: linear-gradient(
+            270deg,
+            rgba(0, 0, 0, 0) 0%,
+            rgb(0, 0, 0) 100%
+        );
+    }
+    .border-right {
+        background: linear-gradient(
+            0,
+            rgba(0, 0, 0, 0) 0%,
+            rgb(0, 0, 0) 100%
+        );
+    }
+
     background-color: rgba(0, 0, 0, 0.3);
     display: flex;
     flex-direction: column;
