--- a/src/styles/_window.scss
+++ b/src/styles/_window.scss
@@ -24,13 +24,26 @@
     align-items: stretch;
     justify-content: stretch;
     border: 1px solid white;
+    border-width: 2px 0 0 2px;
     user-select: none;
     transition: transform 0.1s ease;
+
+    .border-bottom {
+        height: 1px;
+        z-index: 6 !important;
+    }
+
+    .border-right {
+        width: 1px;
+        z-index: 6 !important;
+    }
+
     .menu {
         display: flex;
         align-items: stretch;
         gap: 1rem;
         padding: 0 0.5rem;
+        opacity: 0.9;
         background: linear-gradient(
             90deg,
             var(--color-bg-1) 0%,
@@ -92,7 +105,8 @@
         user-select: text;
 
         .profile,
-        .crimes {
+        .crimes,
+        .contact {
             padding: 1rem;
             height: fit-content !important;
             font-size: 1.1rem;
@@ -117,6 +131,8 @@
                 float: left;
                 filter: saturate(0.2);
                 user-select: none;
+                position: relative;
+                z-index: 1;
             }
 
             .video-embed {
@@ -126,14 +142,29 @@
 
             .tech {
                 padding: 0.5rem 1rem;
-                border: 1px solid white;
-                border-width: 1px 0 1px 1px;
+                border-left: 2px solid white;
+                font-weight: 600;
+                position: relative;
                 background: linear-gradient(
                     270deg,
                     rgba(76, 102, 126, 0) 0%,
                     rgba(76, 102, 126, 0.7) 100%
                 );
-                font-weight: 600;
+
+                &::after {
+                    content: '';
+                    display: block;
+                    position: absolute;
+                    bottom: 0;
+                    left: 0;
+                    right: 0;
+                    height: 1px;
+                    background: linear-gradient(
+                        270deg,
+                        rgba(255, 255, 255, 0) 0%,
+                        rgb(255, 255, 255) 100%
+                    );
+                }
             }
         }
         .face {
