--- a/src/styles/_desktop_icon.scss
+++ b/src/styles/_desktop_icon.scss
@@ -2,6 +2,7 @@
     opacity: 0.9;
     position: relative;
     width: fit-content;
+    user-select: none;
     margin: 1rem;
     .wrapper {
         display: flex;
