--- a/src/styles/_loading.scss
+++ b/src/styles/_loading.scss
@@ -2,6 +2,7 @@
 
 .loading {
     position: fixed;
+    user-select: none;
     background-color: rgba(0, 0, 0, 0.3);
     clip-path: polygon(0 0, 85% 0, 100% 25%, 100% 100%, 0 100%);
     border-left: 2px solid white;
