--- a/src/styles/_window.scss
+++ b/src/styles/_window.scss
@@ -39,6 +39,7 @@
     }
 
     .menu {
+        font-size: 0.9rem;
         display: flex;
         align-items: stretch;
         gap: 1rem;
@@ -66,6 +67,7 @@
     }
 
     nav {
+        font-size: 0.9rem;
         padding: 0.2rem 0.5rem;
         display: flex;
         justify-content: stretch;
