--- a/src/styles/_consent.scss
+++ b/src/styles/_consent.scss
@@ -25,12 +25,12 @@
 
     .agree {
         font-size: 1.3rem;
-        font-weight: 900;
         margin-top: 2rem;
         padding: 1rem;
         text-decoration: underline;
         cursor: pointer;
-        color: red
+        color: red;
+        font-weight: 600;
     }
 
     .flags {
