--- a/src/styles/_window.scss
+++ b/src/styles/_window.scss
@@ -112,12 +112,17 @@
             height: fit-content !important;
             font-size: 1.1rem;
             p {
-                margin: 1.2rem 0;
+                margin: 1.5rem 0;
             }
 
             a {
                 color: white;
                 font-weight: 600;
+            }
+
+            li {
+                margin-bottom: 1rem;
+                margin-left: 1rem;
             }
 
             img,
