--- a/src/styles/_projects.scss
+++ b/src/styles/_projects.scss
@@ -1,3 +1,19 @@
+@keyframes redFlash {
+    0% {
+        color: white;
+        filter: none;
+    }
+    50% {
+        color: red;
+        transform: translateX(var(--hover-offset));
+        filter: blur(2px);
+    }
+    100% {
+        color: white;
+        filter: none;
+    }
+}
+
 .projects {
     border: 2px solid black;
     border-width: 2px 0 0 2px;
@@ -10,11 +26,7 @@
         );
     }
     .border-right {
-        background: linear-gradient(
-            0,
-            rgba(0, 0, 0, 0) 0%,
-            rgb(0, 0, 0) 100%
-        );
+        background: linear-gradient(0, rgba(0, 0, 0, 0) 0%, rgb(0, 0, 0) 100%);
     }
 
     background-color: rgba(0, 0, 0, 0.3);
@@ -67,6 +79,39 @@
                     font-weight: 900;
                     margin-bottom: 0.5rem;
                 }
+            }
+        }
+    }
+
+    nav {
+        display: flex;
+        justify-content: center;
+        margin-bottom: 1em;
+        gap: 1em;
+
+        .project-nav-button {
+            opacity: 0;
+            background: none;
+            border: none;
+            color: white;
+            font-family: 'Rift';
+            font-size: 1.1em;
+            font-weight: 500;
+            padding: 0.4em;
+            --hover-offset: 0.1em;
+
+            &.prev {
+                --hover-offset: -0.1em;
+            }
+
+            &.enabled {
+                opacity: 1;
+                cursor: pointer;
+            }
+
+            &.enabled:hover,
+            &.enabled:active {
+                animation: redFlash 0.2s linear;
             }
         }
     }
