--- a/src/styles/_projects.scss
+++ b/src/styles/_projects.scss
@@ -91,14 +91,15 @@
 
         .project-nav-button {
             opacity: 0;
-            // background: none;
-            background-color: lime;
+            background: none;
             border: none;
             color: white;
             font-family: 'Rift';
             font-size: 1.1em;
             font-weight: 500;
             padding: 0.8em;
+            position: relative;
+            z-index: 10;
             --hover-offset: 0.1em;
 
             &.prev {
