--- a/src/styles/_window.scss
+++ b/src/styles/_window.scss
@@ -113,6 +113,7 @@
             font-size: 1.1rem;
             p {
                 margin: 1.5rem 0;
+                word-wrap: break-word;
             }
 
             a {
