--- a/src/styles/_window.scss
+++ b/src/styles/_window.scss
@@ -105,8 +105,55 @@
         background-color: rgba(0, 0, 0, 0.3);
         user-select: text;
 
+        .project {
+            img.preview {
+                cursor: pointer;
+            }
+
+            .screenshot-info {
+                pointer-events: none;
+                position: absolute;
+                background: linear-gradient(
+                    180deg,
+                    rgba(76, 102, 126, 0) 0%,
+                    rgba(76, 102, 126, 0.8) 50%
+                );
+                padding: 1.4em 0.8em 0.4em 0.8em;
+                z-index: 10;
+                top: 6em;
+                left: 6em;
+
+                &::before {
+                    content: '';
+                    display: block;
+                    border-bottom: 2px solid white;
+                    position: absolute;
+                    width: 4em;
+                    left: -4em;
+                    bottom: 0;
+                    transform-origin: bottom right;
+                    transform: rotate(45deg);
+                }
+
+                &::after {
+                    content: '';
+                    display: block;
+                    position: absolute;
+                    bottom: 0;
+                    left: 0;
+                    right: 0;
+                    height: 2px;
+                    background: linear-gradient(
+                        270deg,
+                        rgba(255, 255, 255, 0) 0%,
+                        rgb(255, 255, 255) 100%
+                    );
+                }
+            }
+        }
+
         .profile,
-        .crimes,
+        .project,
         .contact {
             padding: 1rem;
             height: fit-content !important;
