--- a/src/styles/_screenshots.scss
+++ b/src/styles/_screenshots.scss
@@ -69,6 +69,7 @@
         width: 100%;
         height: 100%;
         object-fit: contain;
+        background-color: white;
         background-repeat: no-repeat;
     }
 
