--- a/src/styles/_window.scss
+++ b/src/styles/_window.scss
@@ -111,6 +111,7 @@
             }
 
             .screenshot-info {
+                font-family: 'Rift', 'Orbitron', sans-serif;
                 pointer-events: none;
                 position: absolute;
                 background: linear-gradient(
@@ -157,6 +158,7 @@
         .contact {
             padding: 1rem;
             height: fit-content !important;
+            font-family: 'Syne Mono';
             font-size: 1.1rem;
             p {
                 margin: 1.5rem 0;
@@ -195,6 +197,7 @@
             }
 
             .tech {
+                font-family: 'Rift', 'Orbitron', sans-serif;
                 padding: 0.5rem 1rem;
                 border-left: 2px solid white;
                 font-weight: 600;
